#ifndef _UI_CONTAINER_H_
#define _UI_CONTAINER_H_


namespace ui
{

class Container
{
};

}

#endif

