#ifndef _UI_ELEMENT_H_
#define _UI_ELEMENT_H_


namespace ui
{

class Element
{

};

}

#endif

