#ifndef _UI_EVENT_H_
#define _UI_EVENT_H_


namespace
{

class Event
{

};

}

#endif

