#ifndef _UI_THING_H_
#define _UI_THING_H_


namespace ui
{

class Thing
{

};

}

#endif

